<resources>
    <string name="app_name">contact_list</string>
    <string name="contacts_id">contact_id</string>
    <string name="contacts_description">contacts_description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="add_contact">Add Contact</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone number</string>
</resources>
