<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewContact">

    <EditText
        android:layout_marginTop="50dp"
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name" />

    <EditText
        android:layout_marginTop="@dimen/text_margin"
        android:id="@+id/Surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/surname" />

    <EditText
        android:layout_marginTop="@dimen/text_margin"
        android:id="@+id/Birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:text="@string/birthday"/>

    <EditText
        android:layout_marginTop="@dimen/text_margin"
        android:id="@+id/Phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phone_number"/>

    <Button
        android:layout_marginTop="@dimen/text_margin"
        android:layout_gravity="center_horizontal"
        android:id="@+id/add_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        android:onClick="add_contact"/>
</LinearLayout>